[gd_scene load_steps=18 format=2]

[ext_resource path="res://Urinal.png" type="Texture" id=1]
[ext_resource path="res://PeeingGuy.png" type="Texture" id=2]
[ext_resource path="res://Minigames/Pissing_Game/PeeingGuy.gd" type="Script" id=3]
[ext_resource path="res://Fonts/PixelRPG.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Minigames/Pissing_Game/PissingGame.gd" type="Script" id=5]
[ext_resource path="res://BathroomWall2.png" type="Texture" id=6]
[ext_resource path="res://AimMarker.png" type="Texture" id=7]
[ext_resource path="res://Arow.png" type="Texture" id=8]
[ext_resource path="res://Text_Box.png" type="Texture" id=9]
[ext_resource path="res://Minigames/Poster_Maker/Images/Clock.png" type="Texture" id=10]
[ext_resource path="res://Minigames/Poster_Maker/Images/Objective.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 43.1558, 107.625 )

[sub_resource type="CircleShape2D" id=2]
radius = 1.57964

[sub_resource type="CapsuleShape2D" id=3]
radius = 7.56036
height = 4.88062

[sub_resource type="Theme" id=4]

[sub_resource type="Animation" id=5]
length = 3.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 4 )

[node name="PissingGame" type="Node2D"]
script = ExtResource( 5 )

[node name="Game_Screen" type="Node2D" parent="."]

[node name="BathroomWall2" type="Sprite" parent="Game_Screen"]
position = Vector2( 39, 78 )
scale = Vector2( 0.328883, 0.341539 )
texture = ExtResource( 6 )

[node name="Urinal" type="Sprite" parent="Game_Screen"]
position = Vector2( 63.5897, 79.3288 )
scale = Vector2( 0.173418, 0.173418 )
texture = ExtResource( 1 )

[node name="Urinal_Collision" type="Area2D" parent="Game_Screen/Urinal"]
position = Vector2( -8.65939, -4.81076 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game_Screen/Urinal/Urinal_Collision"]
shape = SubResource( 1 )

[node name="AimMarker" type="Sprite" parent="Game_Screen/Urinal"]
position = Vector2( -8.50863, -4.9114 )
scale = Vector2( 2.04987, 2.11049 )
texture = ExtResource( 7 )

[node name="PeeingGuy" type="RigidBody2D" parent="Game_Screen"]
position = Vector2( 32.0007, 112.002 )
gravity_scale = 0.0
angular_damp = 0.0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game_Screen/PeeingGuy"]
shape = SubResource( 2 )

[node name="PeeingGuySprite" type="Sprite" parent="Game_Screen/PeeingGuy"]
position = Vector2( 9.85593, -44.057 )
scale = Vector2( 0.145921, 0.145921 )
texture = ExtResource( 2 )

[node name="Pee_Collision" type="Area2D" parent="Game_Screen/PeeingGuy/PeeingGuySprite"]
position = Vector2( 150.555, 149.735 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game_Screen/PeeingGuy/PeeingGuySprite/Pee_Collision"]
shape = SubResource( 3 )
disabled = true

[node name="GameTimer" type="Timer" parent="Game_Screen"]

[node name="UI_Holder" type="Control" parent="Game_Screen"]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left_Btn" type="TextureButton" parent="Game_Screen/UI_Holder"]
margin_top = 136.0
margin_right = 40.0
margin_bottom = 176.0
rect_rotation = -90.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right_Btn" type="TextureButton" parent="Game_Screen/UI_Holder"]
margin_left = 90.0
margin_top = 97.0
margin_right = 130.0
margin_bottom = 137.0
rect_rotation = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="End_Screen" type="VBoxContainer" parent="."]
visible = false
margin_top = 40.0
margin_right = 90.0
margin_bottom = 100.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text_Box" type="Sprite" parent="End_Screen"]
visible = false
position = Vector2( 45.0997, 32.994 )
scale = Vector2( 1.01655, 0.756658 )
texture = ExtResource( 9 )

[node name="End_Message" type="Label" parent="End_Screen"]
visible = false
margin_right = 90.0
margin_bottom = 27.0
text = "Parabens! Voce Conseguiu"
align = 1
autowrap = true

[node name="End_Points" type="Label" parent="End_Screen"]
visible = false
margin_top = 18.0
margin_right = 90.0
margin_bottom = 34.0
text = "100/100"
align = 1

[node name="NextMinigame" type="Button" parent="End_Screen"]
margin_top = 23.0
margin_right = 90.0
margin_bottom = 35.0
text = "Continue"
__meta__ = {
"_editor_description_": ""
}

[node name="Timer" type="RichTextLabel" parent="."]
visible = false
margin_top = 137.0
margin_right = 90.0
margin_bottom = 161.0
text = "15"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points" type="RichTextLabel" parent="."]
visible = false
margin_right = 90.0
margin_bottom = 23.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="HBoxContainer" parent="Points"]
margin_right = 74.0
margin_bottom = 16.0
custom_constants/separation = -5
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score_Label" type="Label" parent="Points/Score"]
margin_right = 67.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "Pontos:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score_Current" type="Label" parent="Points/Score"]
margin_left = 62.0
margin_right = 74.0
margin_bottom = 16.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score_Timer" type="Timer" parent="Points/Score"]
wait_time = 0.2

[node name="Prompt_Screen" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 33.0
margin_right = 90.0
margin_bottom = 101.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text_Box" type="Sprite" parent="Prompt_Screen"]
position = Vector2( 46.6141, 29.5838 )
rotation = -1.34914
scale = Vector2( 0.146127, 0.146127 )
texture = ExtResource( 11 )

[node name="Prompt" type="Label" parent="Prompt_Screen"]
margin_right = 90.0
margin_bottom = 38.0
theme = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "piss in the
 urinal
"
align = 1
valign = 1
autowrap = true

[node name="Clock" type="Sprite" parent="Prompt_Screen"]
position = Vector2( 45, 80 )
texture = ExtResource( 10 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Prompt_Screen/Clock"]
autoplay = "ClockAnim"
anims/ClockAnim = SubResource( 5 )

[node name="Start_Timer" type="Timer" parent="Prompt_Screen"]
autostart = true

[node name="Start_CountDown" type="Label" parent="Prompt_Screen"]
visible = false
margin_top = 68.0
margin_right = 90.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "4"
align = 1
autowrap = true

[node name="Panel" type="Panel" parent="Prompt_Screen"]
margin_top = 68.0
margin_right = 90.0
margin_bottom = 68.0

[connection signal="area_entered" from="Game_Screen/Urinal/Urinal_Collision" to="." method="_on_Urinal_Collision_area_entered"]
[connection signal="area_exited" from="Game_Screen/Urinal/Urinal_Collision" to="." method="_on_Urinal_Collision_area_exited"]
[connection signal="timeout" from="Game_Screen/GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="button_down" from="Game_Screen/UI_Holder/Left_Btn" to="Game_Screen/PeeingGuy" method="_on_Left_Btn_button_down"]
[connection signal="button_down" from="Game_Screen/UI_Holder/Right_Btn" to="Game_Screen/PeeingGuy" method="_on_Right_Btn_button_down"]
[connection signal="pressed" from="End_Screen/NextMinigame" to="." method="_on_NextMinigame_pressed"]
[connection signal="timeout" from="Points/Score/Score_Timer" to="." method="_on_Score_Timer_timeout"]
[connection signal="timeout" from="Prompt_Screen/Start_Timer" to="." method="_on_Start_Timer_timeout"]
